force-app/main/default/objects/Billing_Statement__c/Billing_Statement__c.object-meta.xml
<CustomObject>
    <description>Statement-of-account / billing line generated from work orders via CDC; reused by the GenerateSOA agent action.</description>
    <label>Billing Statement</label>
    <nameField>
        <displayFormat>SOA-{00000}</displayFormat>
        <label>Billing Statement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Billing Statements</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>