force-app/main/default/objects/Billing_Statement__c/fields/Statement_Period__c.field-meta.xml
<CustomField>
    <fullName>Statement_Period__c</fullName>
    <description>e.g. 2026-06</description>
    <inlineHelpText>e.g. 2026-06</inlineHelpText>
    <label>Statement Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>