force-app/main/default/objects/Billing_Statement__c/fields/Tenant__c.field-meta.xml
<CustomField>
    <fullName>Tenant__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Owner of the statement</description>
    <label>Tenant</label>
    <referenceTo>Tenant__c</referenceTo>
    <relationshipLabel>Billing Statements</relationshipLabel>
    <relationshipName>Billing_Statements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>