force-app/main/default/objects/Billing_Statement__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Source work order</description>
    <label>Work Order</label>
    <referenceTo>Work_Order__c</referenceTo>
    <relationshipLabel>Billing Statements</relationshipLabel>
    <relationshipName>Billing_Statements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>